@@ -1,3 +1,12 @@
+Thu Aug 24 000:41:16 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>
+
+        * DAnCE/Plan_Launcher/PCVisitor.cpp
+        * DAnCE/Plan_Launcher/PCVisitor.h
+        * DAnCE/Plan_Launcher/PCVisitorBase.cpp
+        * DAnCE/Plan_Launcher/PCVisitorBase.h
+          Solved the "'class has virtual functions but non-virtual destructor"
+          warnings.
+          
 Wed Aug 23 17:57:15 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>
 
         * DAnCE/Plan_Launcher/PCVisitorBase.h
